@@ -1,25 +1,0 @@
-{% extends "@blazy/blazy.html.twig" %}
-{#
-/**
- * @file
- * Default theme implementation to display a lazyloaded, or responsive image.
- *
- * The core Slick image supports core image, and responsive image.
- *
- * Available variables:
- *   - image: A collection of image data.
- *   - attributes: An array of attributes.
- *   - url: An optional URL the image can be linked to, can be any of
- *       entity URLs, when using Colorbox/Photobox, or Link to content.
- *   - settings: An array containing the given settings.
- *
- * @see template_preprocess_blazy().
- * @see template_preprocess_slick_image().
- *
- * @ingroup themeable
- *
- * @deprecated: Just use blazy.html.twig to reduce function calls.
- * This is never used, and will be removed post 8.x-1.1.
- */
-#}
-{% set attributes = attributes.addClass('media--slick') %}
